--- a/index.html
+++ b/index.html
@@ -11,26 +11,92 @@
 </head>
 
 <body>
-    <section class="firstpage">
-        <nav class="nav1">
-            <a href="index.html" class="a1">Home</a>
-            <a href="index.html" class="a1">About Us</a>
-            <a href="cars.html" class="a1">Best sellers</a>
-            <a href="index.html" class="a1">Contact</a>
-            <img src="images/download.png" class="A1">
-        </nav>
+    <section class="firstpage"> 
+        <header>
+            <nav>
+                <ul class="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us">About Us</a></li>
+                    <li><a href="cars.html">Best Sellers</a></li>
+                </ul>
+            </nav>
+        </header>
+        <br>
+        <img src="images/Cap.PNG" class="imazhi">
+        <br>
+        <h1 class="h2-shi"><strong>New Cars</strong></h1>
+        <br>
+        <img src="images/cap1.PNG" alt="VW" class="imazhi">
         <br>
         <br>
         <br>
-
-
-
-
-
-
-
+        <h1 class="h2-shi"><strong>Popular Models</strong></h1>
+        <section class="popular-models">
+            <div class="model">
+                <img src="images/polinjo.png" alt="Volkswagen Polo" class="model-image">
+                <h3>Volkswagen Polo</h3>
+                <p class="price">Starting at $20,000</p>
+                <a href="#polo" class="cta-button">Take a Look</a>
+            </div>
+    
+            <div class="model">
+                <img src="images/rrr.png" alt="Volkswagen Golf" class="model-image">
+                <h3>Volkswagen Golf</h3>
+                <p class="price">Starting at $24,000</p>
+                <a href="#golf" class="cta-button">Take a Look</a>
+            </div>
+    
+            <div class="model">
+                <img src="images/omg1.jpg" alt="Volkswagen Tiguan" class="model-image">
+                <h3>Volkswagen Tiguan</h3>
+                <p class="price">Starting at $27,000</p>
+                <a href="#tiguan" class="cta-button">Take a Look</a>
+            </div>
+        </section>
 
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 Your Company. All Rights Reserved.</p>
+            <p>
+                <a href="#privacy-policy">Privacy Policy</a> |
+                <a href="#terms-of-use">Terms of Use</a> |
+                <a href="#cookie-policy">Cookie Policy</a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
